@@ -2,6 +2,7 @@ ver 0.22 (not yet released)
 * protocol
   - "findadd"/"searchadd"/"searchaddpl" support the "sort" and
     "window" parameters
+  - add command "readpicture" to download embedded pictures
 * tags
   - new tags "Grouping" (for ID3 "TIT1") and "Work"
 * input
